[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/Nave1/planes_01A-9.png" type="Texture" id=1]
[ext_resource path="res://Assets/Nave1/planes_01A-10.png" type="Texture" id=2]
[ext_resource path="res://Assets/Nave1/planes_01A-1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Nave1/planes_01A-3.png" type="Texture" id=4]
[ext_resource path="res://scripts/Player/PlayerShip1.gd" type="Script" id=5]
[ext_resource path="res://scenes/Weapons/normalShoot/Shoot.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Effects/Explosion.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Nave1/planes_01A-4.png" type="Texture" id=8]
[ext_resource path="res://Assets/Nave1/planes_01A-2.png" type="Texture" id=9]
[ext_resource path="res://Assets/Nave1/planes_01A-7.png" type="Texture" id=10]
[ext_resource path="res://Assets/Nave1/planes_01A-6.png" type="Texture" id=11]
[ext_resource path="res://Assets/Nave1/planes_01A-8.png" type="Texture" id=12]
[ext_resource path="res://Assets/Nave1/planes_01A-5.png" type="Texture" id=13]
[ext_resource path="res://Assets/Nave1/planes_01A-11.png" type="Texture" id=14]
[ext_resource path="res://Assets/Nave1/planes_01A-12.png" type="Texture" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 2 ), ExtResource( 14 ), ExtResource( 1 ), ExtResource( 15 ) ],
"loop": true,
"name": "horizontal",
"speed": 8.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 9 ), ExtResource( 4 ), ExtResource( 8 ) ],
"loop": true,
"name": "vertical",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 7.66667
height = 6.0

[node name="PlayerShip1" type="KinematicBody2D" groups=["player"]]
scale = Vector2( 2.5, 2.5 )
script = ExtResource( 5 )
Explosion = ExtResource( 7 )
Shoot = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -3.33333 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "vertical"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.333333 )
shape = SubResource( 2 )

[node name="ShootSpawn" type="Position2D" parent="."]
position = Vector2( 0, -18 )

[node name="RetardoDisparo" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( 0, -1 )
polygon = PoolVector2Array( -0.333333, -16.3333, -1.66667, -11.6667, -2.66667, -6.66667, -6, -3, -9.33333, 0.666667, -6.66667, 4, -4.33333, 6.33333, -6, 9.33333, -6.33333, 11.3333, -3.66667, 10, 4.33333, 10, 6, 11.3333, 5.66667, 8, 4, 5.33333, 8.33333, 2.33333, 9, 0.333333, 2, -6.66667, 1.66667, -12 )

[node name="ExplosionPoint" type="Position2D" parent="."]
position = Vector2( 0, -18 )

[connection signal="timeout" from="RetardoDisparo" to="." method="_on_RetardoDisparo_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
